--- a/WebVisualizations/humidity.html
+++ b/WebVisualizations/humidity.html
@@ -17,15 +17,13 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand"  href="index.html">Latitude</a>
+      <a class="navbar-brand glossy-text" href="index.html">Latitude</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
@@ -46,7 +44,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="Comparison.html">Comparison</a>
+            <a class="nav-link" href="comparison.html">Comparison</a>
           </li>
         </ul>
       </div>
@@ -90,16 +88,23 @@
       </div>
     </article> <!-- article -->
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
 
-<footer>
-        <div class="footer"> Asel Connolly 2021</div>
-</footer>
+   <!-- Footer -->
+      <!-- Copyright -->
+      <div class="container my-5"></div>
+      <div
+           class="text-center p-3" style="background-color: white">
+        © 2021 Copyright: Asel Connolly
+        <a class="text-dark" href="https://github.com/aselsche/python-api-challenge/"> | Weather Analysis Repo | </a >
+        <a class="text-dark" href="https://github.com/aselsche/LATITUDEVS.X">Website Repo </a >
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+  </div>
+  <!-- End of .container -->
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
