--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -17,15 +17,13 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand glossy-text" href="index.html">Latitude</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
@@ -35,10 +33,10 @@
               Plots
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="Visualizations/max_temperature.html">Max Temperature</a></li>
-              <li><a class="dropdown-item" href="Visualizations/humidity.html">Humidity</a></li>
-              <li><a class="dropdown-item" href="Visualizations/wind_speed.html">Wind Speed</a></li>
-              <li><a class="dropdown-item" href="Visualizations/cloudiness.html">Cloudiness</a></li>
+              <li><a class="dropdown-item" href="max_temperature.html">Max Temperature</a></li>
+              <li><a class="dropdown-item" href="humidity.html">Humidity</a></li>
+              <li><a class="dropdown-item" href="wind_speed.html">Wind Speed</a></li>
+              <li><a class="dropdown-item" href="cloudiness.html">Cloudiness</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -46,14 +44,15 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="Comparison.html">Comparison</a>
+            <a class="nav-link" href="comparison.html">Comparison</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
- 
-    <div class="container">
+
+  
+  <div class="container">
       
       <!-- Stack the columns on mobile by making one full-width and the other half-width -->
       <div class="row gx-5">
@@ -64,18 +63,15 @@
             <br>
           <img class="w-50 float-start" src="Assets/Fig1.png" alt="Latitude">
           <p>
-            I created a Python script to visualize the weather of 600+ cities across the world of
-            varying distance
-            from the equator.
-            To accomplish this, I utlized Python library, the OpenWeatherMap API to create a representative model of
-            weather across world cities.
+            The purpose of this project was to analyze how weather changes as you get closer to the equater.
+            To accomplish this analysis. we first pulled data from the OpenWeatherMapAPI to assemble a 
+            dataset on over 500 cities.
           </p>
           <p>
-            After assembling the dataset, Matplotlib Python library was used to plot various
-            aspects of the weather vs, latitude. Factors observed included: max temperature, humidity,
-            cloudines, and wind speed. This site provides the source data ad visualizations created
-            as part of the analysis, as well as explanations and descriptions of any trends and
-            correlations observed.
+            After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. 
+            Factors we looked at included: humidity, temperature, cloudiness and windspeed. 
+            This site provides the source data and visualizations created as part of the analysis,as well as
+             explanations and descriptions of any trends and correlations witnessed.
           </p>
           </article>
         </div>
@@ -92,18 +88,32 @@
         </div>
 
       </div>
+         
     </article> <!-- article -->
     </div>
+   <!-- Footer -->
+  
+    <!-- Copyright -->
+    <div class="container my-5"></div>
+    <div
+         class="text-center p-3" style="background-color: white">
+      © 2021 Copyright: Asel Connolly
+      <a class="text-dark" href="https://github.com/aselsche/python-api-challenge/"> | Weather Analysis Repo | </a >
+      <a class="text-dark" href="https://github.com/aselsche/LATITUDEVS.X">Website Repo </a >
 
-<footer>
-        <div class="footer"> Asel Connolly 2021</div>
-</footer>
+
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+</div>
+<!-- End of .container -->
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-
 
 </body>
 
