--- a/WebVisualizations/max_temperature.html
+++ b/WebVisualizations/max_temperature.html
@@ -11,11 +11,13 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
+
+
   <title>Welcome to the Weather Data Visualization Dashboard</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand glossy-text" href="index.html">Latitude</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -31,10 +33,10 @@
               Plots
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="Visualizations/max_temperature.html">Max Temperature</a></li>
-              <li><a class="dropdown-item" href="Visualizations/humidity.html">Humidity</a></li>
-              <li><a class="dropdown-item" href="Visualizations/wind_speed.html">Wind Speed</a></li>
-              <li><a class="dropdown-item" href="Visualizations/cloudiness.html">Cloudiness</a></li>
+              <li><a class="dropdown-item" href="max_temperature.html">Max Temperature</a></li>
+              <li><a class="dropdown-item" href="humidity.html">Humidity</a></li>
+              <li><a class="dropdown-item" href="wind_speed.html">Wind Speed</a></li>
+              <li><a class="dropdown-item" href="cloudiness.html">Cloudiness</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -42,13 +44,13 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="Comparison.html">Comparison</a>
+            <a class="nav-link" href="comparison.html">Comparison</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
- 
+
     <div class="container">
       
       <!-- Stack the columns on mobile by making one full-width and the other half-width -->
@@ -74,16 +76,28 @@
           <img class="w-50 float-start" src="Assets/Fig2.png" alt="Latitude">
           <img class="w-50 float-start" src="Assets/Fig3.png" alt="Latitude">
           <img class="w-50 float-start" src="Assets/Fig4.png" alt="Latitude">
+      
           </div>
         </div>
 
       </div>
     </article> <!-- article -->
     </div>
-
-<footer>
-      <div class="footer"> Asel Connolly 2021</div>
-</footer>
+   <!-- Footer -->
+      <!-- Copyright -->
+      <div class="container my-5"></div>
+      <div
+           class="text-center p-3" style="background-color: white">
+        © 2021 Copyright: Asel Connolly
+        <a class="text-dark" href="https://github.com/aselsche/python-api-challenge/"> | Weather Analysis Repo | </a >
+        <a class="text-dark" href="https://github.com/aselsche/LATITUDEVS.X">Website Repo </a >
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+  </div>
+  <!-- End of .container -->
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
