--- a/WebVisualizations/wind_speed.html
+++ b/WebVisualizations/wind_speed.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand glossy-text" href="index.html">Latitude</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -44,13 +44,12 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="Comparison.html">Comparison</a>
+            <a class="nav-link" href="comparison.html">Comparison</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
- 
     <div class="container">
       
       <!-- Stack the columns on mobile by making one full-width and the other half-width -->
@@ -86,9 +85,21 @@
     </article> <!-- article -->
     </div>
 
-<footer>
-      <div class="footer"> Asel Connolly 2021</div>
-</footer>
+   <!-- Footer -->
+      <!-- Copyright -->
+      <div class="container my-5"></div>
+      <div
+           class="text-center p-3" style="background-color: white">
+        © 2021 Copyright: Asel Connolly
+        <a class="text-dark" href="https://github.com/aselsche/python-api-challenge/"> | Weather Analysis Repo | </a >
+        <a class="text-dark" href="https://github.com/aselsche/LATITUDEVS.X">Website Repo </a >
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+  </div>
+  <!-- End of .container -->
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
