--- a/index.html
+++ b/index.html
@@ -91,24 +91,22 @@
          
     </article> <!-- article -->
     </div>
-   <!-- Footer -->
-  
+   
+  <!-- Footer -->
+   <footer>
     <!-- Copyright -->
     <div class="container my-5"></div>
     <div
          class="text-center p-3" style="background-color: white">
       © 2021 Copyright: Asel Connolly
       <a class="text-dark" href="https://github.com/aselsche/python-api-challenge/"> | Weather Analysis Repo | </a >
-      <a class="text-dark" href="https://github.com/aselsche/LATITUDEVS.X">Website Repo </a >
+      <a class="text-dark" href="https://aselsche.github.io/Web-Design-Challenge/index.html">Website Repo </a >
 
 
     </div>
     <!-- Copyright -->
-  </footer>
+   </footer>
   <!-- Footer -->
-</div>
-<!-- End of .container -->
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
