--- a/max_temperature.html
+++ b/max_temperature.html
@@ -83,21 +83,23 @@
       </div>
     </article> <!-- article -->
     </div>
-   <!-- Footer -->
-      <!-- Copyright -->
-      <div class="container my-5"></div>
-      <div
-           class="text-center p-3" style="background-color: white">
-        © 2021 Copyright: Asel Connolly
-        <a class="text-dark" href="https://github.com/aselsche/python-api-challenge/"> | Weather Analysis Repo | </a >
-        <a class="text-dark" href="https://github.com/aselsche/LATITUDEVS.X">Website Repo </a >
-      </div>
-      <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
-  </div>
-  <!-- End of .container -->
-  
+   
+  <!-- Footer -->
+  <footer>
+    <!-- Copyright -->
+    <div class="container my-5"></div>
+    <div
+         class="text-center p-3" style="background-color: white">
+      © 2021 Copyright: Asel Connolly
+      <a class="text-dark" href="https://github.com/aselsche/python-api-challenge/"> | Weather Analysis Repo | </a >
+      <a class="text-dark" href="https://aselsche.github.io/Web-Design-Challenge/index.html">Website Repo </a >
+
+
+    </div>
+    <!-- Copyright -->
+   </footer>
+  <!-- Footer -->
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
