Updating the links

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     </div>
   </nav>
 
-  
-  <div class="container">
+    <div class="container">
       
       <!-- Stack the columns on mobile by making one full-width and the other half-width -->
       <div class="row gx-5">
@@ -80,11 +79,19 @@
           <h1 class="text-muted">Plots</h1>
          
           <hr class="description-hr" />
-          <img class="w-50 float-start" src="Assets/Fig1.png" alt="Latitude">
-          <img class="w-50 float-start" src="Assets/Fig2.png" alt="Latitude">
-          <img class="w-50 float-start" src="Assets/Fig3.png" alt="Latitude">
-          <img class="w-50 float-start" src="Assets/Fig4.png" alt="Latitude">
-          </div>
+          <a href="https://aselsche.github.io/Web-Design-Challenge/max_temperature.html">
+            <img class="w-50 float-start" src="Assets/Fig1.png" alt="Latitude">
+          </a>
+          <a href="https://aselsche.github.io/Web-Design-Challenge/comparison.html">
+            <img class="w-50 float-start" src="Assets/Fig2.png" alt="Latitude">
+          </a>
+          <a href="https://aselsche.github.io/Web-Design-Challenge/cloudiness.html">
+            <img class="w-50 float-start" src="Assets/Fig3.png" alt="Latitude">
+          </a>       
+          <a href="https://aselsche.github.io/Web-Design-Challenge/wind_speed.html">
+            <img class="w-50 float-start" src="Assets/Fig4.png" alt="Latitude">
+          </a>  
+                   </div>
         </div>
 
       </div>
@@ -93,7 +100,7 @@
     </div>
    
   <!-- Footer -->
-   <footer>
+  <footer>
     <!-- Copyright -->
     <div class="container my-5"></div>
     <div
